added html structure to the index page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,51 @@
 </head>
 
 <body>
+  <div class="container">
+    <div class="landing-section">
+      <nav>
+        <ul>
+          <li>Icon</li>
+          <li>Store</li>
+          <li>Mac</li>
+          <li>iPod</li>
+          <li>iPhone</li>
+          <li>iPad</li>
+          <li>iTunes</li>
+          <li>Support</li>
+          <li>search</li>
+        </ul>
+      </nav>
+      <div class="welcome-section">
+        <div>first image</div>
+        <div>second image</div>
+        <div>third image</div>
+      </div>
+    </div>
+    <div class="apple-products">
+      <div class="product">first product</div>
+      <div class="product">second prduct</div>
+      <div class="product">third product</div>
+      <div class="product">fourth product</div>
+    </div>
+    <footer>
+      <div class="more-links-footer">
+        <p>Shop the Apple Online Store (1-800-MY-APPLE), visit an Apple Retail Store, or find a reseller.</p>
+        <ul class="footer-link-items">
+          <li class="link-item">Site Map</li>
+          <li class="link-item">Hot News</li>
+          <li class="link-item">RSS Feeds</li>
+          <li class="link-item">Media Info</li>
+          <li class="link-item">Environment</li>
+          <li class="link-item">Job Opportunities</li>
+          <li class="link-item">Contact Us</li>
+          <li class="link-item">Flag</li>
+        </ul>
+      </div>
+      <p>Copyright © 2014 Apple Inc. All rights reserved. <a class="term-of-use" href="#">Terms of UsePrivacy</a> <a
+          class="policy" href="#">Policy</a></p>
+    </footer>
+  </div>
 
 </body>
 
