styled layout using css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="images/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Apple</title>
 </head>
 
 <body>
   <div class="container">
     <div class="landing-section">
-      <nav>
+      <nav class="nav-link-items">
         <ul>
           <li>Icon</li>
           <li>Store</li>
@@ -50,8 +50,8 @@
           <li class="link-item">Flag</li>
         </ul>
       </div>
-      <p>Copyright © 2014 Apple Inc. All rights reserved. <a class="term-of-use" href="#">Terms of UsePrivacy</a> <a
-          class="policy" href="#">Policy</a></p>
+      <p class="copyright">Copyright © 2014 Apple Inc. All rights reserved. <a class="term-of-use" href="#">Terms of
+          UsePrivacy</a> <a class="policy" href="#">Policy</a></p>
     </footer>
   </div>
 
