added images and styled apple product page

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       </div>
     </div>
     <div class="apple-products">
-      <div class="product">first product</div>
-      <div class="product">second prduct</div>
-      <div class="product">third product</div>
-      <div class="product">fourth product</div>
+      <div class="product"><img src="./images/i5.jpg" alt="iphon product" class="fluid-img"></div>
+      <div class="product"><img src="./images/i5c.jpg" alt="iphon product" class="fluid-img"></div>
+      <div class="product"><img src="./images/birthday.jpg" alt="iphon product" class="fluid-img"></div>
+      <div class="product"><img src="./images/supply.jpg" alt="iphon product" class="fluid-img"></div>
     </div>
     <footer>
       <div class="more-links-footer">
