added styles on the footer

--- a/index.html
+++ b/index.html
@@ -38,16 +38,18 @@
     </div>
     <footer>
       <div class="more-links-footer">
-        <p>Shop the Apple Online Store (1-800-MY-APPLE), visit an Apple Retail Store, or find a reseller.</p>
+        <p class="shopping-scenario">Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a
+            href="#">Apple Retail Store</a>, or
+          find a <a href="#">reseller</a>.</p>
         <ul class="footer-link-items">
-          <li class="link-item">Site Map</li>
-          <li class="link-item">Hot News</li>
-          <li class="link-item">RSS Feeds</li>
-          <li class="link-item">Media Info</li>
-          <li class="link-item">Environment</li>
-          <li class="link-item">Job Opportunities</li>
-          <li class="link-item">Contact Us</li>
-          <li class="link-item">Flag</li>
+          <li class="link-item"><a href="#">Site Map</a></li>
+          <li class="link-item"><a href="#">Hot News</a></li>
+          <li class="link-item"><a href="#">RSS Feeds</a></li>
+          <li class="link-item"><a href="#">Media Info</a></li>
+          <li class="link-item"><a href="#">Environment</a></li>
+          <li class="link-item"><a href="#">Job Opportunities</a></li>
+          <li class="link-item"><a href="#">Contact Us</a></li>
+          <li class="link-item"><a href="#">Flag</a></li>
         </ul>
       </div>
       <p class="copyright">Copyright © 2014 Apple Inc. All rights reserved. <a class="term-of-use" href="#">Terms of
