added navbar bg and landing page section images

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </ul>
       </nav>
       <div class="welcome-section">
-        <div>first image</div>
-        <div>second image</div>
-        <div>third image</div>
+        <div><img src="./images/question.png" alt="" class="img-fluid"></div>
+        <div><img src="./images/share.png" alt="" class="img-fluid"></div>
+        <div><img src="./images/verse.png" alt="" class="img-fluid"></div>
       </div>
     </div>
     <div class="apple-products">
