styled landing page section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/b9edfb7622.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>Apple</title>
 </head>
@@ -21,13 +23,16 @@
           <li>iPad</li>
           <li>iTunes</li>
           <li>Support</li>
-          <li>search</li>
         </ul>
+        <form class="search-nav" action=""><input type="search" name="" id=""></form>
       </nav>
       <div class="welcome-section">
-        <div><img src="./images/question.png" alt="" class="img-fluid"></div>
-        <div><img src="./images/share.png" alt="" class="img-fluid"></div>
-        <div><img src="./images/verse.png" alt="" class="img-fluid"></div>
+        <a href="#" class="question size"> What will your verse be</a>
+        <a href="#" class="share size">Everyone has something to share. See how people are using iPad in their unique
+          ways to add to the world's story</a>
+        <a href="#" class="verse"> <span class="text-content-link">Watch the "Your Verse" film and explore the
+            stories</span>
+          <span><i class="far fa-caret-square-right"></i></span></a>
       </div>
     </div>
     <div class="apple-products">
