fixed navbar linear gradient issues

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <div class="landing-section">
       <nav class="nav-link-items">
         <ul>
-          <li>Icon</li>
-          <li>Store</li>
-          <li>Mac</li>
-          <li>iPod</li>
-          <li>iPhone</li>
-          <li>iPad</li>
-          <li>iTunes</li>
-          <li>Support</li>
+          <li><a href="#"><i class="fab fa-apple"></i></a></li>
+          <li><a href="#">Store</a></li>
+          <li><a href="#">Mac</a></li>
+          <li><a href="#">iPod</a></li>
+          <li><a href="#">iPhone</a></li>
+          <li><a href="#">iPad</a></li>
+          <li><a href="#">iTunes</a></li>
+          <li><a href="#">Support</a></li>
         </ul>
-        <form class="search-nav" action=""><input type="search" name="" id=""></form>
+        <form class="search-nav" action=""><input type="search" name="" id="search-input"></form>
       </nav>
       <div class="welcome-section">
         <a href="#" class="question size"> What will your verse be</a>
@@ -57,8 +57,10 @@
           <li class="link-item"><a href="#">Flag</a></li>
         </ul>
       </div>
-      <p class="copyright">Copyright © 2014 Apple Inc. All rights reserved. <a class="term-of-use" href="#">Terms of
-          UsePrivacy</a> <a class="policy" href="#">Policy</a></p>
+      <div class="copyright-container">
+        <p class="copyright">Copyright © 2014 Apple Inc. All rights reserved. <a class="term-of-use" href="#">Terms of
+            UsePrivacy</a> <a class="policy" href="#">Policy</a></p>
+      </div>
     </footer>
   </div>
 
