fixed non empty attributes in index

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="#">iTunes</a></li>
           <li><a href="#">Support</a></li>
         </ul>
-        <form class="search-nav" action=""><input type="search" name="" id="search-input"></form>
+        <form class="search-nav"><input type="search" id="search-input"></form>
       </nav>
       <div class="welcome-section">
         <a href="#" class="question size"> What will your verse be</a>
