fixed css linter errors

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="#" class="question size"> What will your verse be</a>
         <a href="#" class="share size">Everyone has something to share. See how people are using iPad in their unique
           ways to add to the world's story</a>
-        <a href="#" class="verse"> <span class="text-content-link">Watch the "Your Verse" film and explore the
+        <a href="#" class="verse size"> <span class="text-content-link">Watch the "Your Verse" film and explore the
             stories</span>
           <span><i class="far fa-caret-square-right"></i></span></a>
       </div>
@@ -43,8 +43,8 @@
     </div>
     <footer>
       <div class="more-links-footer">
-        <p class="shopping-scenario">Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a
-            href="#">Apple Retail Store</a>, or
+        <p class="shopping-scenario">Shop the <a class="appl" href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an
+          <a class="appl" href="#">Apple Retail Store</a>, or
           find a <a href="#">reseller</a>.</p>
         <ul class="footer-link-items">
           <li class="link-item"><a href="#">Site Map</a></li>
