added border radius on the nav bar

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       </div>
     </div>
     <div class="apple-products">
-      <div class="product"><img src="./images/i5.jpg" alt="iphon product" class="fluid-img"></div>
-      <div class="product"><img src="./images/i5c.jpg" alt="iphon product" class="fluid-img"></div>
-      <div class="product"><img src="./images/birthday.jpg" alt="iphon product" class="fluid-img"></div>
-      <div class="product"><img src="./images/supply.jpg" alt="iphon product" class="fluid-img"></div>
+      <div class="product"><a href="#"><img src="./images/i5.jpg" alt="iphon product" class="fluid-img"></a></div>
+      <div class="product"><a href="#"><img src="./images/i5c.jpg" alt="iphon product" class="fluid-img"></a></div>
+      <div class="product"><a href="#"><img src="./images/birthday.jpg" alt="iphon product" class="fluid-img"></a></div>
+      <div class="product"><a href="#"><img src="./images/supply.jpg" alt="iphon product" class="fluid-img"></a></div>
     </div>
     <footer>
       <div class="more-links-footer">
