replaced square icon with circle icon in index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://kit.fontawesome.com/b9edfb7622.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
@@ -32,7 +33,9 @@
           ways to add to the world's story</a>
         <a href="#" class="verse size"> <span class="text-content-link">Watch the "Your Verse" film and explore the
             stories</span>
-          <span><i class="far fa-caret-square-right"></i></span></a>
+          <span class="material-icons">
+            play_circle_outline
+          </span>
       </div>
     </div>
     <div class="apple-products">
